[gd_scene load_steps=19 format=3 uid="uid://dp0qpxxpxofwy"]

[ext_resource type="Script" uid="uid://c8165t2gmcg71" path="res://src/scenes/main.gd" id="1_x4os5"]
[ext_resource type="PackedScene" uid="uid://bjbghmriww2nq" path="res://src/utility/communication/S7Wrapper.tscn" id="2_8oy5r"]
[ext_resource type="Texture2D" uid="uid://v7jp10vttvaa" path="res://icon.svg" id="3_akft7"]
[ext_resource type="PackedScene" uid="uid://tdu1j3vh5f2s" path="res://src/scenes/player.tscn" id="4_1hqvy"]
[ext_resource type="PackedScene" uid="uid://yuhu5j8qr6jp" path="res://src/premades/conveyor.tscn" id="4_ovvnk"]
[ext_resource type="PackedScene" uid="uid://jvcga1w45fq7" path="res://src/premades/box.tscn" id="4_w8f5i"]
[ext_resource type="PackedScene" uid="uid://c3hkse46q3kyj" path="res://src/premades/panel.tscn" id="5_w7xoj"]
[ext_resource type="PackedScene" uid="uid://c6kogfajfqaov" path="res://src/premades/safety_switch.tscn" id="7_a05fg"]
[ext_resource type="PackedScene" uid="uid://eh3fkvk20db4" path="res://src/premades/actuator_push.tscn" id="10_0ni23"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1hqvy"]
albedo_texture = ExtResource("3_akft7")
uv1_scale = Vector3(50, 50, 50)

[sub_resource type="BoxMesh" id="BoxMesh_w8f5i"]
size = Vector3(20, 0.095, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_akft7"]
data = PackedVector3Array(-10, 0.0475, 10, 10, 0.0475, 10, -10, -0.0475, 10, 10, 0.0475, 10, 10, -0.0475, 10, -10, -0.0475, 10, 10, 0.0475, -10, -10, 0.0475, -10, 10, -0.0475, -10, -10, 0.0475, -10, -10, -0.0475, -10, 10, -0.0475, -10, 10, 0.0475, 10, 10, 0.0475, -10, 10, -0.0475, 10, 10, 0.0475, -10, 10, -0.0475, -10, 10, -0.0475, 10, -10, 0.0475, -10, -10, 0.0475, 10, -10, -0.0475, -10, -10, 0.0475, 10, -10, -0.0475, 10, -10, -0.0475, -10, 10, 0.0475, 10, -10, 0.0475, 10, 10, 0.0475, -10, -10, 0.0475, 10, -10, 0.0475, -10, 10, 0.0475, -10, -10, -0.0475, 10, 10, -0.0475, 10, -10, -0.0475, -10, 10, -0.0475, 10, 10, -0.0475, -10, -10, -0.0475, -10)

[sub_resource type="BoxShape3D" id="BoxShape3D_ovvnk"]
size = Vector3(4.277893, 0.7305908, 6.8690796)

[sub_resource type="BoxShape3D" id="BoxShape3D_w7xoj"]
size = Vector3(1.0454102, 1.6533203, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ni23"]
size = Vector3(60, 1, 60)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_akft7"]

[sub_resource type="Sky" id="Sky_w7xoj"]
sky_material = SubResource("ProceduralSkyMaterial_akft7")

[sub_resource type="Environment" id="Environment_w8f5i"]
background_mode = 2
sky = SubResource("Sky_w7xoj")
ambient_light_sky_contribution = 0.2
tonemap_mode = 2

[node name="Main" type="Node"]
script = ExtResource("1_x4os5")

[node name="S7Wrapper" parent="." instance=ExtResource("2_8oy5r")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="World" type="Node" parent="."]

[node name="Floor" type="StaticBody3D" parent="World"]

[node name="Mesh" type="MeshInstance3D" parent="World/Floor"]
material_override = SubResource("StandardMaterial3D_1hqvy")
mesh = SubResource("BoxMesh_w8f5i")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Floor"]
shape = SubResource("ConcavePolygonShape3D_akft7")

[node name="Conveyor" parent="World" instance=ExtResource("4_ovvnk")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.14786243, 0, -0.17785275)
beltSpeed = 5.0

[node name="PLCTag" parent="World/Conveyor" index="2"]
memoryArea = 130

[node name="Panel" parent="World" instance=ExtResource("5_w7xoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3692474, 1.1400212, 1.1100558)

[node name="PLCTag" parent="World/Panel/StartButton" index="2"]
memoryArea = 131
offset = 10

[node name="PLCTag" parent="World/Panel/StopButton" index="2"]
memoryArea = 131
offset = 10
bit = 1

[node name="SafetySwitch" parent="World" instance=ExtResource("7_a05fg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4525886, 0.44149685, 0.26251233)

[node name="PLCTag" parent="World/SafetySwitch" index="2"]
memoryArea = 131
offset = 10
bit = 4

[node name="Actuator" parent="World" instance=ExtResource("10_0ni23")]
transform = Transform3D(-0.9998031, 0, -0.019843142, 0, 1, 0, 0.019843142, 0, -0.9998031, -1.834521, 1.4289109, 0.5624003)
speed = 0.62

[node name="Box" parent="World" groups=["Products"] instance=ExtResource("4_w8f5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.853835, 1.4821355, -0.1250503)

[node name="Logic" type="Node" parent="."]

[node name="BoxDespawner" type="Area3D" parent="Logic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.868978, -0.27612722, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Logic/BoxDespawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.277648, -0.13470459, -0.22763062)
shape = SubResource("BoxShape3D_ovvnk")

[node name="BoxSpawner" type="Area3D" parent="Logic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5086164, 1.9273267, -0.15740645)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Logic/BoxSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4392006, 0.24072266, -0.022467613)
shape = SubResource("BoxShape3D_w7xoj")

[node name="PlayerCatcher" type="Area3D" parent="Logic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -16.390427, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Logic/PlayerCatcher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.084418, 0)
shape = SubResource("BoxShape3D_0ni23")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w8f5i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 8.163636, 0)
shadow_enabled = true

[node name="CharacterBody3D" parent="." instance=ExtResource("4_1hqvy")]
transform = Transform3D(0.7509415, 0, -0.66036874, 0, 1, 0, 0.66036874, 0, 0.7509415, -5.501418, 1.1871219, 2.511504)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -2.7006202, 3.5441744, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Logic/BoxDespawner" to="." method="_on_box_despawner_body_entered"]
[connection signal="body_exited" from="Logic/BoxSpawner" to="." method="_on_box_spawner_body_exited"]
[connection signal="body_entered" from="Logic/PlayerCatcher" to="." method="_on_area_3d_body_entered"]

[editable path="World/Conveyor"]
[editable path="World/Panel"]
[editable path="World/Panel/StartButton"]
[editable path="World/Panel/StopButton"]
[editable path="World/Panel/ActButton"]
[editable path="World/SafetySwitch"]
[editable path="World/SafetySwitch/Interactable"]
[editable path="World/Actuator"]
